# orionmano-api

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  main.py  seed.py
app/api/: deps.py
app/api/v1/: articles.py  auth.py  chat.py  companies.py  decks.py  documents.py  memory.py  reports.py  router.py  valuation.py
app/models/: __init__.py  chat.py  company.py  document.py  memory.py  published_article.py  report.py  user.py
app/schemas/: auth.py  chat.py  company.py  document.py  published_article.py  report.py
app/services/: auth_service.py  branding.py  company_intelligence.py
app/services/agent/: __init__.py  context.py  memory.py  registry.py  router.py  skill.py
app/services/agent/skills/: __init__.py  analyze_financials.py  executive_summary.py  extract_document.py  generate_deck.py  generate_report.py  generate_valuation_workpaper.py  produce_valuation_inputs.py  web_research.py
app/services/ai/: client.py  document_parser.py  logo_fetcher.py  vision.py  web_search.py  website_lookup.py
app/services/article/: generator.py  image.py  industries.py
app/services/chat/: chat_service.py
app/services/deck/: generator.py  styles.py
app/services/report/: chart_renderer.py  citations.py  generator.py  pdf_export.py
scripts/: backfill_industries.py  probe_chart_generation.py  probe_outline.py  regen_outline_failures.py  seed_sample_article.py  verify_dedup.py
valuation/: build_skeleton.py  compute.py  export_workpaper.py  sample_inputs.json
